@startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0



class Ship {
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
}



class CargoManifest {
-containerNumber
}


class Ports {
-identification
-name
}


class ShipPosition {
-baseDateTime
-latitude
-longitude
-sog
-cog
-heading
-position
-transceiver
}



CargoManifest "*" -- "1..*" Ports : deliver >


Ship "1" -- "1..*" ShipPosition : has >
Ship "0..*"--"1" Ports: anchor in>
Ship "1"--"1..*" CargoManifest: have in>


@enduml